--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   location         :
   email            :
   uri              :
-  home             : "http://mibook.org/gr"
+  home             : "https:/tkaradimos.github.io/gr"
   bitbucket        :
   codepen          :
   dribbble         :
