--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ naver_site_verification  :
 twitter:
   username               :
 facebook:
-  username               :
+  username               : "/HCI-ionio-438025583393215/"
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -71,7 +71,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  facebook         :https://www.facebook.com/HCI-ionio-438025583393215/"
   foursquare       :
   github           : "mibook"
   gitlab           :
