--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ name                     : "mibook"
 description              : "Making Interactivity Greek Book."
 url                      : "https://tkaradimos.github.io"
 baseurl                  : "/mibook"
-repository               : "tkaradimos/mibook"
+repository               : "Tkaradimos/mibook"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -46,7 +46,7 @@ naver_site_verification  :
 twitter:
   username               :
 facebook:
-  username               : "/HCI-ionio-438025583393215/"
+  username               : "HCI-ionio-438025583393215/"
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -66,12 +66,12 @@ author:
   location         :
   email            :
   uri              :
-  home             : "https://tkaradimos.github.io/gr/"
+  home             : "https://Tkaradimos.github.io/mibook/"
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :https://www.facebook.com/HCI-ionio-438025583393215/"
+  facebook         : "https://www.facebook.com/HCI-ionio-438025583393215/"
   foursquare       :
   github           : "mibook"
   gitlab           :
@@ -79,7 +79,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  linkedin         :
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
@@ -127,7 +127,6 @@ keep_files:
   - .svn
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
-
 
 # Conversion
 markdown: kramdown
@@ -178,6 +177,7 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jemoji
+  - jekyll-include-cache
 
 
 # Archives
@@ -257,10 +257,10 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: "single"
       author_profile: true
       read_time: true
-      comments: # true
+      comments: #true
       share: true
       related: true
   - scope:
