--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ title_separator          : "-"
 name                     : "mibook"
 description              : "Making Interactivity Greek Book."
 url                      : "https://tkaradimos.github.io"
-baseurl                  : "/mibook"
-repository               : "Tkaradimos/mibook"
+baseurl                  : "/gr"
+repository               : "tkaradimos/gr"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
