--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ author:
   location         :
   email            :
   uri              :
-  home             : "https://Tkaradimos.github.io/mibook/"
+  home             : "http://mibook.org/gr"
   bitbucket        :
   codepen          :
   dribbble         :
